--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cordova-plugin-native-keyboard",
   "version": "1.3.2",
   "description": "This plugin aims to solve common keyboard problems encountered with Cordova / PhoneGap apps. The messenger component (see screenshots) is ready for production, but this plugin will have more tricks up its sleeve. I'll document those once they're ready for primetime as well.",
-  "typings": "index.d.ts",
+  "typings": "www/NativeKeyboard.d.ts",
   "cordova": {
     "id": "cordova-plugin-native-keyboard",
     "platforms": [
